--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -6,7 +6,10 @@
   <thead>
     <tr>
       <th>Title</th>
-      <th colspan="3"></th>
+      <th>vote</th>
+      <th>+</th>
+      <th>-</th>
+      <th>Delete</th>
     </tr>
   </thead>
 
